new func upload image to drive

--- a/src/views/pages/movie/index.ejs
+++ b/src/views/pages/movie/index.ejs
@@ -126,11 +126,13 @@
                                                 </div>
                                                 <div class="form-group d-flex">
                                                     <label for="thumb">Thumbnail:</label>
-                                                    <input type="text" class="form-control ml-2" id="addThumb">
+                                                    <input type="file" class="form-control" id="addThumb"
+                                                        accept="image/*">
                                                 </div>
                                                 <div class="form-group d-flex">
-                                                    <label for="thumb">Background:</label>
-                                                    <input type="text" class="form-control ml-2" id="addBackground">
+                                                    <label for="Background">Background:</label>
+                                                    <input type="file" class="form-control" id="addBackground"
+                                                        accept="image/*">
                                                 </div>
                                                 <div class="form-group d-flex">
                                                     <label for="year" style="line-height: 30px;">Year:</label>
