new banner func

--- a/src/views/partials/left.ejs
+++ b/src/views/partials/left.ejs
@@ -33,6 +33,7 @@
                 <a class="collapse-item" href="/admin/types">Types</a>
                 <a class="collapse-item" href="/admin/servers">Servers</a>
                 <a class="collapse-item" href="/admin/users">Users</a>
+                <a class="collapse-item" href="/admin/banners">Banners</a>
             </div>
         </div>
     </li>
