init func get rating from imdb & update model movie

--- a/src/views/pages/movie/information.ejs
+++ b/src/views/pages/movie/information.ejs
@@ -114,6 +114,16 @@
                                     <input type="number" value="<%- movie.liked %>" class="form-control" id="editLiked"
                                         autocomplete="off">
                                 </div>
+                                <div class="form-group">
+                                    <label for="IMDB">IMDB:</label>
+                                    <input type="text" value="<%- movie.imdb %>" class="form-control" id="editIMDB"
+                                        autocomplete="off">
+                                </div>
+                                <div class="form-group">
+                                    <label for="Rating">Rating:</label>
+                                    <input type="text" value="<%- movie.rating %>" class="form-control" id="editRating"
+                                        autocomplete="off">
+                                </div>
                                 <input type="hidden" value="<%- movie.id %>" id="idMovie">
                                 <button id="updateMovie" class="btn btn-primary">Save</button>
                             </div>
