--- a/src/views/pages/movie/index.ejs
+++ b/src/views/pages/movie/index.ejs
@@ -164,7 +164,11 @@
                                                             <% }); %>
                                                     </select>
                                                 </div>
-
+                                                <div class="form-group">
+                                                    <label for="IMDB">IMDB:</label>
+                                                    <input type="text" class="form-control" id="addIMDB"
+                                                        autocomplete="off">
+                                                </div>
                                                 <button id="newMovie" class="btn btn-primary">Create</button>
                                             </div>
                                         </div>
