new api search, new, top

--- a/src/views/pages/movie/index.ejs
+++ b/src/views/pages/movie/index.ejs
@@ -40,8 +40,8 @@
                                                 <tr>
                                                     <th>ID</th>
                                                     <th>Name</th>
-                                                    <th>Thumbnail</th>
-                                                    <th>Background</th>
+                                                    <!-- <th>Thumbnail</th>
+                                                    <th>Background</th> -->
                                                     <th>Year</th>
                                                     <th>Status</th>
                                                     <th>Type</th>
@@ -62,12 +62,12 @@
                                                         <td>
                                                             <%- movie.name %>
                                                         </td>
-                                                        <td>
-                                                            <img src="<%- movie.thumb %>" width="100">
+                                                        <!-- <td>
+                                                            <img src="<%- //movie.thumb %>" width="100">
                                                         </td>
                                                         <td>
-                                                            <img src="<%- movie.background %>" width="150">
-                                                        </td>
+                                                            <img src="<%- //movie.background %>" width="150">
+                                                        </td> -->
                                                         <td>
                                                             <%- movie.Year.name %>
                                                         </td>
