--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -44,11 +44,13 @@
                                                 <div class="col mr-2">
                                                     <div
                                                         class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                                        Tổng số truyện</div>
-                                                    <div class="h5 mb-0 font-weight-bold text-gray-800">123126</div>
+                                                        Tổng số phim</div>
+                                                    <div class="h5 mb-0 font-weight-bold text-gray-800">
+                                                        <%- movies %>
+                                                    </div>
                                                 </div>
                                                 <div class="col-auto">
-                                                    <i class="fas fa-book fa-2x text-gray-300"></i>
+                                                    <i class="fa-solid fa-video fa-2x text-gray-300"></i>
                                                 </div>
                                             </div>
                                         </div>
@@ -64,7 +66,9 @@
                                                     <div
                                                         class="text-xs font-weight-bold text-success text-uppercase mb-1">
                                                         Tổng người dùng</div>
-                                                    <div class="h5 mb-0 font-weight-bold text-gray-800">123456</div>
+                                                    <div class="h5 mb-0 font-weight-bold text-gray-800">
+                                                        <%- users %>
+                                                    </div>
                                                 </div>
                                                 <div class="col-auto">
                                                     <i class="fas fa-user fa-2x text-gray-300"></i>
@@ -74,30 +78,21 @@
                                     </div>
                                 </div>
 
-                                <!-- Earnings (Monthly) Card Example -->
+                                <!--  -->
                                 <div class="col-xl-3 col-md-6 mb-4">
                                     <div class="card border-left-info shadow h-100 py-2">
                                         <div class="card-body">
                                             <div class="row no-gutters align-items-center">
                                                 <div class="col mr-2">
                                                     <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
-                                                        Tasks</div>
-                                                    <div class="row no-gutters align-items-center">
-                                                        <div class="col-auto">
-                                                            <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">50%
-                                                            </div>
-                                                        </div>
-                                                        <div class="col">
-                                                            <div class="progress progress-sm mr-2">
-                                                                <div class="progress-bar bg-info" role="progressbar"
-                                                                    style="width: 50%" aria-valuenow="50"
-                                                                    aria-valuemin="0" aria-valuemax="100"></div>
-                                                            </div>
-                                                        </div>
+                                                        Số lượng phòng đang Live
+                                                    </div>
+                                                    <div class="h5 mb-0 font-weight-bold text-gray-800">
+                                                        <%- rooms %>
                                                     </div>
                                                 </div>
                                                 <div class="col-auto">
-                                                    <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
+                                                    <i class="fa-solid fa-tv fa-2x text-gray-300"></i>
                                                 </div>
                                             </div>
                                         </div>
