--- a/src/views/partials/left.ejs
+++ b/src/views/partials/left.ejs
@@ -2,7 +2,7 @@
 
     <!-- Sidebar - Brand -->
     <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/admin">
-        <img src="" alt="" srcset="" width="70%">
+        <img src="../../public/img/logo.png" alt="" srcset="" width="70%">
     </a>
 
     <!-- Divider -->
