--- a/src/views/pages/episode.ejs
+++ b/src/views/pages/episode.ejs
@@ -168,6 +168,19 @@
                                     <div class="modal-body">
                                         <div>
                                             <div class="form-group">
+                                                <div class="form-inline">
+                                                    <div class="form-group mb-2">
+                                                        <label for="generatorEp">Total: </label>
+                                                        <input type="number" class="form-control ml-2" id="generatorEp">
+                                                    </div>
+                                                    <div class="form-group mx-sm-3 mb-2">
+                                                        <label for="generatorEnd">End: </label>
+                                                        <input type="checkbox" class="form-control ml-2"
+                                                            id="generatorEnd" placeholder="Password">
+                                                    </div>
+                                                    <button class="btn btn-primary mb-2"
+                                                        id="generator">Generator</button>
+                                                </div>
                                                 <div class="form-group d-flex">
                                                     <textarea id="multiEp" class="form-control w-100"
                                                         style="height: 400px; resize: none;"></textarea>
