update dashboard & new movie route

--- a/src/views/partials/bot.ejs
+++ b/src/views/partials/bot.ejs
@@ -14,5 +14,8 @@
 
 <!-- Page level custom scripts -->
 <script src="public/js/admin.js"></script>
+<script src="public/js/Chart.min.js"></script>
+<script src="public/js/chart-area.js"></script>
+<script src="public/js/chart-pie.js"></script>
 
 <script src="https://cdn.ckeditor.com/ckeditor5/34.2.0/classic/ckeditor.js"></script>
