--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -1,5 +1,5 @@
-<base href="http://api.scats.tk/admin">
-<!-- <base href="http://localhost:5550/admin"> -->
+<!-- <base href="http://api.scats.tk/admin"> -->
+<base href="http://localhost:5550/admin">
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <link rel="icon" type="image/png" sizes="16x16" href="../../public/img/icon.png">
